# peer-reviewer

./: README.md  demo_review.sh  pyproject.toml  research_AI_Agents_vs_Agentic_AI_Review_20250902_235900.tex  run_memory_optimized.sh  test_basic.py  test_demo.py
.claude/agents/: machine-learning-engineer.md  peer-reviewer.md
.claude/docs/: gpt-oss-20b.md
.claude/docs/overleaf/: WellcomeOR_styles.sty  main.tex
.claude/output-styles/: research-style.md
peer_reviewer/: __init__.py  __main__.py  core.py  model_interface.py  pdf_processor.py
peer_reviewer/peer_reviewer/: __init__.py  cli.py
peer_reviewer/peer_reviewer/core/: __init__.py  latex_generator.py  model_interface.py  pdf_processor.py  reviewer.py
peer_reviewer/peer_reviewer/templates/: __init__.py  peer_review.tex
peer_reviewer/peer_reviewer/utils/: __init__.py  config.py  exceptions.py  helpers.py  logging.py
reviews/: AI Agents vs. Agentic AI_review_20250902_113752.tex  AI Agents vs. Agentic AI_review_20250902_114621.tex  AI Agents vs. Agentic AI_review_20250902_115105.tex
